--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  http: ^0.12.0+4
+  #http: ^0.12.0+4
+  http: ^0.11.2+16
   provider: ^4.0.5
-  hue_dart: ^0.2.1
+  #hue_dart: ^0.2.1
+  hue_dart: ^0.1.2
 
 
 dev_dependencies:
